--- a/ReadMe
+++ b/ReadMe
@@ -18,3 +18,6 @@ Make the app design on figma
 
 
 Get API from: https://console.cloud.google.com/apis/api/youtube.googleapis.com
+
+
+Uses 3 main API's, youtube-dl to download everything / YoutubeAPI official, to view some info / pytube to get duration of videos
