--- a/ReadMe
+++ b/ReadMe
@@ -1,3 +1,6 @@
+This project uses the youtube-dl library (https://github.com/ytdl-org/youtube-dl),
+which is licensed under the Unlicense (https://unlicense.org/).
+
 Steps to take to make app:
 - List of all features: -Download videos
 - Download Audios
