--- a/ReadMe
+++ b/ReadMe
@@ -1,3 +1,3 @@
-#Download Youtube videos or saved playlists  
+<h1>Download Youtube videos or saved playlists</h1>  
 This project uses the youtube-dl library (https://github.com/ytdl-org/youtube-dl),
 which is licensed under the Unlicense (https://unlicense.org/).
